# ros_package_template

./: CMakeLists.txt  package.xml
cmake/: PCL.cmake  YAML.cmake  g2o.cmake  geographic.cmake  glog.cmake  sophus.cmake
src/: template_node.cpp
